--- a/Dictionary.html
+++ b/Dictionary.html
@@ -10,12 +10,9 @@
         <div class="container">
             <h1>Online Dictionary</h1>
             <div class="input-container">
-                <input type="text" id="new-word" placeholder="Add a word">
-                <button id="add-word">Add</button>
-            </div>
-            <div class="input-container">
-                <input type="text" id="search-word" placeholder="Search for a word">
-                <button id="search-word-btn">Search</button>
+                <input type="text" id="word-input" placeholder="Enter a word">
+                <button id="add-word" onclick="addWord()">Add Word</button>
+                <button id="search-word-btn" onclick="searchWord()">Search Word</button>
             </div>
             <p id="message"></p>
         </div>
